# qocogen

./: .gitignore  LICENSE  README.md  pyproject.toml  test.py
.github/workflows/: benchmark_regression.yml  build.yml  unit_tests.yml
benchmarks/: construct_mpc_problem.py  run_benchmarks.py  run_comparison.py  run_regression.sh
benchmarks/configs/: branch.yml  main.yml
benchmarks/data/: matFiles_aircraft_1.mat  matFiles_aircraft_10.mat  matFiles_aircraft_11.mat  matFiles_aircraft_12.mat  matFiles_aircraft_13.mat  matFiles_aircraft_2.mat  matFiles_aircraft_3.mat  matFiles_aircraft_4.mat  matFiles_ballOnPlate_1.mat  matFiles_ballOnPlate_2.mat  matFiles_ballOnPlate_3.mat  matFiles_ballOnPlate_4.mat  matFiles_binaryDistillationColumn_1.mat  matFiles_binaryDistillationColumn_2.mat  matFiles_dcMotor_1.mat  matFiles_dcMotor_2.mat  matFiles_dcMotor_3.mat  matFiles_dcMotor_4.mat  matFiles_dcMotor_5.mat  matFiles_dcMotor_6.mat  matFiles_doubleInvertedPendulum_1.mat  matFiles_doubleInvertedPendulum_2.mat  matFiles_doubleInvertedPendulum_3.mat  matFiles_fiordosExample_1.mat  matFiles_fiordosExample_2.mat  matFiles_fiordosExample_3.mat  matFiles_forcesExample_1.mat  matFiles_forcesExample_2.mat  matFiles_forcesExample_3.mat  (+35 more)
qocogen/: __init__.py  codegen.py  codegen_utils.py  interface.py
tests/: test_lcvx.py  test_lcvx_bad_scale.py  test_linear_objective.py  test_no_constraints.py  test_no_eq_constraints.py  test_no_ineq_constraints.py  test_no_soc_constraints.py  test_pdg.py  test_robust_kalman_filter.py  test_simple_socp1.py  test_simple_socp2.py  test_simple_socp3.py
(+18 files in other folders)
